[gd_scene load_steps=2 format=3 uid="uid://dkcs8bagw8xop"]

[ext_resource type="Script" path="res://script/Option/gremlin_menu.gd" id="1_5cbjv"]

[node name="Gremlin_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5cbjv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -80.0
offset_right = 30.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Death" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Death"

[node name="Kapish" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Kapish"

[node name="Koda" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Koda"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Eon" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "????"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Death" to="." method="_on_death_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Kapish" to="." method="_on_kapish_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Koda" to="." method="_on_koda_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Eon" to="." method="_on_eon_pressed"]
