extends Control

@onready var character = get_node("/root/game/Player")



func _on_death_pressed():
	get_tree().change_scene_to_file("res://scence/game/game.tscn")
	

func _on_kapish_pressed():
	get_tree().change_scene_to_file("res://scence/game/game.tscn")
	

func _on_koda_pressed():
	get_tree().change_scene_to_file("res://scence/game/game.tscn")
	




func _on_eon_pressed():
	get_tree().change_scene_to_file("res://scence/game/game.tscn")
